# neyaden-app

./: index.html  package-lock.json  package.json
.github/workflows/: main.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/train_info/: delay_info_structs.rs  get_stop_train_info.rs  get_train_info.rs  mod.rs  stab_get_train_info.rs  stop_train_info_structs.rs  test.rs
src-tauri/src/train_info/delay_info/: get_stop_keihan_train_info.rs  get_stop_westjr_train_info.rs  mod.rs
src/components/: CurrentTimeDisplay.tsx  ErrorModal.tsx  Footer.tsx  Heder.tsx  StopRunningModal.tsx  StopTrain.tsx  TrainInfoComp.tsx
src/components/MySlider/: MySlider.tsx
src/methods/: TimeFormat.tsx
src/types/: TrainInfo.d.tsx
