[package]
name = "neyaden-app"
version = "0.1.0"
description = "寝屋川市駅から出発する電車に大阪電気通信大学から向かって間に合う電車を表示するアプリです。"
authors = ["Shiryu Ogawa", "Haruto Yamazaki"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.39.3", features = ["full"] }
reqwest = "0.12.7"
anyhow = "1.0.86"
chrono = "0.4.38"
itertools = "0.13.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
